apps/blocked.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocked
  namespace: dev
spec:
  selector:
    app: blocked
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blocked-deployment
  namespace: dev
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: blocked
    spec:
      containers:
      - name: blocked
        image: jimpaine/aksdemo:latest
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blocked
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.passHostHeader: "true"
spec:
  rules:
  - host: aks.jim.cloud
    http:
      paths:
      - path: /blocked
        backend:
          serviceName: blocked
          servicePort: 80
